<resources>
    <string name="app_name">Term Manager</string>
    <string name="terms_label">Terms</string>
    <string name="courses_title">Courses</string>
    <string name="all_terms_title">All Terms</string>
    <string name="add_term_label">Add a Term</string>
    <string name="term_name_hint">Term Name</string>
    <string name="start_date_hint">Start Date</string>
    <string name="term_start_picker_title">Term Start Date</string>
    <string name="term_end_hint">End Date</string>
    <string name="from_label">Start</string>
    <string name="to_label">End</string>
    <string name="term_name_label">Term Name</string>
    <string name="add_a_course">Add a Course</string>
    <string name="add_course_title">New Course</string>
    <string name="param_termId">termId</string>
    <string name="term_end_picker_title">Term End Date</string>
    <string name="course_start_picker_title">Course Start Date</string>
    <string name="course_end_picker_title">Course End Date</string>
    <string name="courseTerm_title">Add course to term</string>
    <string name="course_name_hint">Course name</string>
    <string name="course_remove_text">Remove from term</string>
    <string name="course_delete_text">Delete</string>
    <string name="course_name_label">Course name</string>
    <string name="assessments_title">Assessments</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="notes_title">Notes</string>
    <string name="status_title">Status</string>
    <string name="edit_label">Edit</string>
    <string name="assessment_title_hint">Title</string>
    <string name="assessment_type_performance">Performance</string>
    <string name="assessment_type_objective">Objective</string>
    <string name="goal_date_text">Goal Date</string>
    <string name="add_assessment_title">Add Assessment</string>
    <string name="assessment_type_text">Assessment Type</string>
    <string name="assessment_list_item_delete">Delete</string>
    <string name="edit_assessment_title">Edit Assessment</string>
    <string name="edit_assessment_text">Edit Assessment</string>
    <string name="goal_date_picker_header">Goal Date</string>
    <string name="course_in_progress">In Progress</string>
    <string name="course_completed">Completed</string>
    <string name="course_dropped">Dropped</string>
    <string name="course_plan_to_take">Plan to Take</string>
    <string name="course_status_label">Status</string>
    <string name="edit_course_title">Edit Course</string>
    <string name="mentor_name_hint">Name</string>
    <string name="mentor_phone_hint">Phone number</string>
    <string name="mentor_email_hint">Email address</string>
    <string name="note_title_hint">Title</string>
    <string name="note_text_hint">Note</string>
    <string name="new_note_title">New Note</string>
    <string name="edit_note_title">Edit Note</string>
    <string name="note_details_title">Note</string>
    <string name="note_save">Save</string>
    <string name="add_note_label">Add Note</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="note_delete_label">Delete</string>
    <string name="title_error">Title must be at least 3 characters.</string>
    <string name="course_save_error_title">Can\'t save course</string>
    <string name="ok_button_text">OK</string>
    <string name="term_delete_text">Delete</string>
    <string name="term_courses_error">This Term has courses assigned to it. Please remove the courses before deleting the Term.</string>
    <string name="title_activity_home_screen">Term Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_terms">Terms</string>
    <string name="nav_courses">Courses</string>
    <string name="nav_assessments">Assessments</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_assessments">Assessments</string>
    <string name="latest_term_label">Latest Term</string>
    <string name="no_terms_yet">No Terms yet</string>
    <string name="latest_term_view_all">View all</string>
    <string name="current_course_title">Current Course</string>
    <string name="no_courses_added">No Courses yet</string>
    <string name="to">To</string>
    <string name="next_assessment_title">Next Assessment</string>
    <string name="mentor_label">Mentor</string>
    <string name="share_note">Share your note</string>
    <string name="mentor_info">Mentor Info</string>
    <string name="alerts_label">Alerts</string>
    <string name="add_text">Add</string>
    <string name="no_assessments_upcoming">No Assessments upcoming</string>
    <string name="note_text">Note text</string>
    <string name="assessment_save_error_title">Can\'t save Assessment</string>
    <string name="course_title_text">Course Title</string>
    <string name="course_start_error">Start date must be set.</string>
    <string name="course_end_error">Anticipated end date must be set</string>
    <string name="alerts_off">Off</string>
    <string name="alerts_on">On</string>
    <string name="anticipated_end">Anticipated End</string>
    <string name="course_info_label">Course Info</string>
    <string name="dates_label">Dates</string>
    <string name="term_title_text">Term Title</string>
    <string name="term_info_label">Term Info</string>
    <string name="start_date_alert_label">Start Date Alert</string>
    <string name="end_date_alert_label">End Date Alert</string>
    <string name="notifications_label">Notifications</string>
    <string name="start_alerts_label">Start Alerts</string>
    <string name="goal_date_notifications">Goal Date Notifications</string>
    <string name="course_details_title">Course Details</string>
    <string name="assessments_and_notes_label">Assessments and Notes</string>
    <string name="note_save_error">Can\'t Save Note</string>
    <string name="term_save_error">Can\'t Save Term</string>
    <string name="term_details">Term Details</string>
</resources>