<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Title"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <Button android:id="@+id/note_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_delete_24"
            android:drawableTint="@android:color/white"
            android:text="@string/note_delete_label"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title_hint"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/note_text_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@color/grey_100"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine|textCapSentences" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/note_cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:layout_marginEnd="32dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/note_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_baseline_save_24"
            android:drawableTint="@android:color/white"
            android:text="@string/note_save" />

    </LinearLayout>

</LinearLayout>