<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/termColor">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_term_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddTermActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/term_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:boxStrokeColor="@color/termColorDark"
                app:hintTextColor="@color/termColorDark"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/term_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/term_name_hint"
                    android:singleLine="true"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/startDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:elevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/term_title_layout">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:text="@string/from_label" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/term_start_text"
                    style="@style/Widget.TermManager.Button.DateLaunchButton"
                    android:text="@string/start_date_hint"
                    android:textColor="@color/termColorDark"
                    app:iconTint="@color/termColorDark"
                    app:icon="@drawable/ic_baseline_calendar_today_24"
                    app:iconPadding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startDateLayout">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:text="@string/to_label" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/term_end_text"
                    style="@style/Widget.TermManager.Button.DateLaunchButton"
                    android:text="@string/term_end_hint"
                    android:textColor="@color/termColorDark"
                    app:iconTint="@color/termColorDark"
                    app:icon="@drawable/ic_baseline_calendar_today_24"
                    app:iconPadding="8dp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_term_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_save"/>"
</androidx.coordinatorlayout.widget.CoordinatorLayout>