<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout android:id="@+id/home_term_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <LinearLayout android:id="@+id/home_term_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:textColor="@color/termColorDark"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:text="@string/latest_term_label"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/view_all_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latest_term_view_all"
                        android:layout_marginEnd="8dp"
                        style="@style/Widget.MaterialComponents.Button.TextButton"/>

                </LinearLayout>
                <FrameLayout
                    android:id="@+id/latest_term_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout android:id="@+id/no_latest_term_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="invisible">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/no_terms_yet"/>
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Add a Term"
                            style="@style/Widget.MaterialComponents.Button.TextButton"/>
                    </LinearLayout>

                    <View android:id="@+id/latest_term_view"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </FrameLayout>

            </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>